--- a/index.html
+++ b/index.html
@@ -73,11 +73,10 @@
                 <button id="birthday" onclick="myfunction()" class="bg-success">Submit</button>
 
             </form>
-
         </div>
-        <div id="message">
 
-        </div>
+        <div id="message"></div>
+
         <div class="footer">
             <div class="card bg-primary text-white">
                 <div class="card-title">
@@ -86,7 +85,6 @@
                 </div>
             </div>
             <div class="card-body">
-
 
                 <ul>
                     <li>Orci ut velit</li>
@@ -99,7 +97,6 @@
                     <li>Morbi dictum</li>
                     <li>Ex et malesuada pellentesque</li>
                 </ul>
-
 
             </div>
 
