--- a/index.html
+++ b/index.html
@@ -42,71 +42,42 @@
             </div>
         </div>
         <div class="jumbotron2">
-            <form action name="myform">
-                <label for="name">Name:</label>
-                <br>
-                <input type="text" placeholder="Enter your name">
-                <br>
-                <br>
+            <img src='img/africa1.jpg' width="100%" height="auto">
+            <div class="centered">
+                <form action name="myform">
+                    <label for="name">Name:</label>
+                    <br>
+                    <input type="text" placeholder="Enter your name">
+                    <br>
+                    <br>
 
-                <label for="email">Email:</label>
-                <br>
-                <input type="text" placeholder="Enter your email">
-                <br>
-                <br>
+                    <label for="email">Email:</label>
+                    <br>
+                    <input type="text" placeholder="Enter your email">
+                    <br>
+                    <br>
 
-                <div class="form-group mb15">
-                    <label class="label">Gender</label>
-                    <div class="rdio rdio-default fs11">
-                        <input type="radio" name="gender" id="male" value="Male">
-                        <label for="male">&nbsp;&nbsp;Male</label>
+                    <div class="form-group mb15">
+                        <label class="label">Gender</label>
+                        <div class="rdio rdio-default fs11">
+                            <input type="radio" name="gender" id="male" value="Male">
+                            <label for="male">&nbsp;&nbsp;Male</label>
+                        </div>
+                        <div class="rdio rdio-default fs11">
+                            <input type="radio" name="gender" id="female" value="Female">
+                            <label for="female">&nbsp;&nbsp;Female</label>
+                        </div>
                     </div>
-                    <div class="rdio rdio-default fs11">
-                        <input type="radio" name="gender" id="female" value="Female">
-                        <label for="female">&nbsp;&nbsp;Female</label>
-                    </div>
-                </div>
-                <label for="message">Birthday:</label>
-                <br>
-                <input type="text" placeholder="mm/dd/yy" id="date" class="form-control" autocomplete="on">
-                <br>
-                <button id="birthday" onclick="myfunction()" class="bg-success">Submit</button>
-
+                    <label for="message">Birthday:</label>
+                    <br>
+                    <input type="text" placeholder="mm/dd/yy" id="date" class="form-control" autocomplete="on">
+                    <br>
+                    <button id="birthday" onclick="myfunction()" class="bg-success">Submit</button>
+                    <div id="message"></div>
+            </div>
             </form>
         </div>
-
-        <div id="message"></div>
-        <br>
-        <div class="footer">
-            <div class="card bg-primary text-white">
-                <div class="card-title">
-
-                    <h2>Et Consequat Magna</h2>
-                </div>
-            </div>
-            <div class="card-body">
-
-                <ul>
-                    <li>Orci ut velit</li>
-                    <li>Pellentesque cursus justo</li>
-                    <li>In felis condimentum cursus</li>
-                </ul>
-                <ul>
-                    <li>Proin dignissim lectus enim</li>
-                    <li>Eu bibendum mauris euismod in</li>
-                    <li>Morbi dictum</li>
-                    <li>Ex et malesuada pellentesque</li>
-                </ul>
-
-            </div>
-
-            <div class="card-footer">
-                <p>MIT Copyright (c) 2020 Africa Cultures.Inc</p>
-            </div>
-        </div>
     </div>
-
 </body>
-
 
 </html>
