--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="jumbotron1">
-                    <h1>About</h1>
+                    <h1><strong>ABOUT</strong></h1>
                     <p>This is an application that prompts you to enter your birthday and depending on your gender
                         outputs your
                         Akan Name. Derived from the Ghanian culture, children are frequently given their first name
@@ -30,51 +30,53 @@
             <div class="col-md-6">
                 <div class="card">
                     <div class="card-body">
-                        <h2>Steps To Follow</h2>
+                        <h2><u>Steps To Follow</u></h2>
                         <ul>
                             <li>Fill in the form below with valid info asked</li>
                             <li>Click on the submit button below</li>
                             <li>Sit back...</li>
                         </ul>
-                        <img src="img/africa.jpg" width="240" height="250">
+                        <img src="img/africa.jpg" width="100%" height="360px">
                     </div>
                 </div>
             </div>
         </div>
         <div class="jumbotron2">
             <img src='img/africa1.jpg' width="100%" height="auto">
-            <div class="centered">
-                <form action name="myform">
-                    <label for="name">Name:</label>
-                    <br>
-                    <input type="text" placeholder="Enter your name">
-                    <br>
-                    <br>
 
-                    <label for="email">Email:</label>
-                    <br>
-                    <input type="text" placeholder="Enter your email">
-                    <br>
-                    <br>
+            <form action name="myform">
+                <label for="name">Name:</label>
+                <br>
+                <input type="text" placeholder="Enter your name">
+                <br>
+                <br>
 
-                    <div class="form-group mb15">
-                        <label class="label">Gender</label>
-                        <div class="rdio rdio-default fs11">
-                            <input type="radio" name="gender" id="male" value="Male">
-                            <label for="male">&nbsp;&nbsp;Male</label>
-                        </div>
-                        <div class="rdio rdio-default fs11">
-                            <input type="radio" name="gender" id="female" value="Female">
-                            <label for="female">&nbsp;&nbsp;Female</label>
-                        </div>
+                <label for="email">Email:</label>
+                <br>
+                <input type="text" placeholder="Enter your email">
+                <br>
+                <br>
+
+                <div class="form-group mb15">
+                    <label class="label">Gender</label>
+                    <div class="rdio rdio-default fs11">
+                        <input type="radio" name="gender" id="male" value="male">
+                        <label for="male">&nbsp;&nbsp;Male</label>
                     </div>
-                    <label for="message">Birthday:</label>
-                    <br>
-                    <input type="text" placeholder="mm/dd/yy" id="date" class="form-control" autocomplete="on">
-                    <br>
-                    <button id="birthday" onclick="myfunction()" class="bg-success">Submit</button>
-                    <div id="message"></div>
-            </div>
+                    <div class="rdio rdio-default fs11">
+                        <input type="radio" name="gender" id="female" value="female">
+                        <label for="female">&nbsp;&nbsp;Female</label>
+                    </div>
+                </div>
+                <label for="message">Birthday:</label>
+                <br>
+                <input type="text" placeholder="mm/dd/yy" id="date" class="form-control" autocomplete="on">
+                <br>
+                <button id="birthday" onclick="myfunction()" class="bg-success">Submit</button>
+                <br>
+                <br>
+                <div id="message"></div>
+
             </form>
         </div>
     </div>
